# RTOS_ESP32_TRH

./: CMakeLists.txt  README.md  partitions.csv
components/OTA/: CMakeLists.txt  https_ota.c
components/OTA/include/: https_ota.h
components/aht20/: CMakeLists.txt  aht20.c
components/aht20/include/: aht20.h
components/influxdb/: CMakeLists.txt  influxdb.c
components/influxdb/include/: influxdb.h
components/lcd_touch/: CMakeLists.txt  lcd.c  lcd.h  ui.c  ui.h  ui_comp_hook.c  ui_comp_hook.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1794831165.c  ui_img_disconnect_png.c  ui_img_info_icon_png.c  ui_img_logo_png.c  ui_screen_1.c  ui_screen_1.h  ui_screen_2.c  ui_screen_2.h  ui_screen_3.c  ui_screen_3.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
